refactor: streamline population services and improve method naming